--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,478 @@
-.App {
+.App{
+  font-family: 'Poppins', sans-serif;
+  background-color: #F6F8FC;
+  min-height: 100vh;
+}
+.navbar{
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 15px 0px;
+  color: #010001;
+  margin-bottom: 20px;
+}
+.nav_left{
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 800;
+  
+}
+
+.con{
+  margin: 0 auto;
+  width: 75%;
+  max-width: 1240px;
+}
+.nav_logo{
+  margin-right: 10px;
+  font-size: 50px;
+}
+
+.card_list{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+/* CARD  */
+.card{
+  margin: 16px;
+  border-radius: 2px;
+  background-color: #ffffff;
+  padding: 20px;
+  width: 232px;
   text-align: center;
+  color: #010001;
+  border: 0.8px solid #7956F3;
+  transition: all 0.1s ease-in-out;
+}
+.card:hover{
+  transform: scale(1.05);
+}
+.card_img img{
+  margin-top: 12px;
+  width: 120px ;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.card_title{
+  margin-top: 10px;
+  font-size: 24px;
+  font-weight: 500;
+}
+.card_detail{
+  margin: 0 auto;
+  width: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.card_fol,
+.card_rep{
+  font-size: 20px;
+  font-weight: 600;
+  color: #ef4565;
+}
+.card_fol_txt,
+.card_rep_txt{
+  font-size: 12px;
+}
+.card_loc{
+  font-size: 14px;
+  color: #5f6c7b;
+}
+.card_det_btn{
+  
+  margin-top: 15px;
+  background-color: #dfd6fc;
+  font-weight: 600;
+  color: #7956F3;
+  padding: 6px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+.card_det_btn:hover{
+  background-color: #d2c5fb;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* SEARCH */
+.search{
+  cursor: pointer;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  border-radius: 12px;
+  transition: all 0.1s ease-in-out;
+  padding: 6px 12px;
+  background-color: #ececed;
+  color: #91919e;
+  border: 1px solid #ececed;
+}
+.search:hover{
+  background-color: white;
+  box-shadow: #d2c5fb8f 0px 0px 0px 4px;
+}
+.search:hover #srch{
+  background-color: white;
+}
+.search:active{
+  background-color: white;
+}
+#srch{
+  color: #252527;
+  background-color: #ececed;
+  border-radius: 4px;
+  padding: 4px 8px;
+  outline: none;
+  border: 0;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  transition: all 0.1s ease-in-out;
+}
+#srch::placeholder{
+  color: #91919e;
+  font-weight: 400;
+}
+.search_btn{
+  color: white;
+  background-color: #010001;
+  padding: 4px 8px;
+}
+.search_body{
+  display: flex;
+  align-items: center;
+}
+.search_logo{
+  border-radius: 12px;
+}
+/* ERROR */
+.error{
+  font-size: 16px;
+  font-weight: 500;
+  color: #EB7569;
+  background-color: #ffdbd7;
+  padding: 8px 12px;
+  border-radius: 4px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+/* USER CARD */
+.user_card{
+  background-color: white;
+  text-align: center;
+  border-radius: 12px;
+  padding: 10px;
+}
+.user_img{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+.user_img img{
+  margin-top: 20px;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.hireable{
+  position: absolute;
+  bottom: -10px;
+  margin: 0 auto;
+  background-color: #8869FA;
+  border: 4px solid white;
+  border-radius: 6px;
+  color: white;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 2px 12px;
+}
+.user_country{
+  font-size: 14px;
+  color: #5F5F61;
+  font-weight: 500;
+}
+.user_name{
+  color: #201F22;
+  font-size: 24px;
+  font-weight: 600;
+}
+.user_det{
+  
+  margin: 20px auto;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.d_text{
+  color: #8869FA;
+  font-size: 24px;
+  font-weight: 600;
+}
+.d_title{
+  color: #5F5F61;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+/* DETAIL */
+.detail{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.left_det{
+  align-self: start;
+  top: 1em;
+  position: sticky;
+  flex: 1.75;
+  margin-right: 20px;
+}
+.right_det{
+  flex: 4;
+  animation: fade 1s ease;
+}
+@keyframes fade {
+  0%{
+    opacity: 0;
+  }100%{
+    opacity: 1;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* ABOUT */
+.link{
+  font-size: 20px;
+  text-decoration: none;
+  width: 36px;
+  height: 36px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #e1dafb;
+  border-radius: 10px;
+  margin: 0px 5px;
+  transition: all 0.1s ease;
+}
+.link:hover{
+  background-color: #d8cffc;
+}
+.link_icon{
+  color: #8869FA;
+  
+}
+.about_links{
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about_header{
+  display: flex;
+  align-items: center;
+}
+.about_line{
+  border-radius: 6px;
+  margin-left: 10px;
+  width: 100%;
+  height: 8px;
+  background-color: #dad1f9;
+}
+.about_title{
+  font-size: 24px;
+  font-weight: 600;
+  color: #8869FA;
+}
+.about{
+  background-color: white;
+  padding: 16px;
+  border-radius: 10px;
+}
+.about_txt{
+  color: #5F5F61;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+/* REPOS */
+
+.repo{
+  background-color: white;
+  padding: 16px;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+.repo_title{
+  color: #FA760A;
+  font-size: 20px;
+  font-weight: 600;
+}
+.repo_created{
+  color: #6b6b6d;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+.repo_txt{
+  font-size: 18px;
+  color: #5F5F61;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.repo_links{
+  flex-wrap: wrap;
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+}
+.repo_tags{
+  display: flex;
+  align-items: center;
+}
+.repo_tags div{
+  cursor: pointer;
+  background-color: #fedbbe;
+  padding: 4px 8px;
+  margin: 0 8px;
+  border-radius: 8px;
+  color: #FA760A;
+  font-weight: 600;
+  font-size: 14px;
+  transition: all 0.1s ease-in-out;
+}
+.repo_tags div:hover{
+  background-color: #ffca9e;
+}
+.repo_link a{
+  margin: 10px;
+  text-decoration: none;
+  color: #FA760A;
+  font-weight: 600;
+  font-size: 15px;
+  border: 1.6px solid #FA760A;
+  padding: 4px 10px;
+  border-radius: 4px;
+  transition: all 0.1s ease-in-out;
+  
+}
+.repo_link a:hover{
+  background-color: #FA760A;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* PROGRESS */
+.left_det_stat{
+  margin-top: 20px;
+  background-color: white;
+  padding: 24px;
+  
+}
+.progress{
+  margin: 12px 0;
+}
+.progress_header{
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.progress_bar{
+  border-radius: 4px;
+  width: 100%;
+  height: 8px;
+  background-color: #e5deff;
+}
+.main_progress_bar{
+  height: 8px;
+  background-color: #8869FA;
+  border-radius: 4px;
+  max-width: 100%;
+  animation: progress_anm 2s ease;
+  transition: all 2s ease;
+}
+@keyframes progress_anm {
+  0%{
+    width: 0%;
+  }
+}
+.l_d_s_title{
+  font-size: 20px;
+  font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.loading{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #e5deff;
+  height: 4px;
+}
+.l_sqr{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 4px;
+  background-color: #8869FA;
+  animation: load 1.1s ease;
+}
+@keyframes load {
+  0%{
+    width: 0%;
+  }100%{
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+@media screen and (max-width: 800px) {
+.con{
+  width: 90%;
+}
+.detail{
+  width: 100%;
+}
+.left_det{
+  width: 100%;
+  align-self: auto;
+  position: static;
+  flex:1;
+  margin-right: 0px;
+}
+.right_det{
+  width: 100%;
+  flex: 1;
+}
+.repo_title{
+  overflow: hidden;
+}
+.navbar{
+  justify-content: center;
+}
+.card{
+  width: 76%;
+}
+.card_list{
+  justify-content: center;
+}
+.card_img img{
+  width: 180px ;
+  height: 180px;
+}
+.about{
+  margin-top: 20px;
+}
+.search{
+  width: 92%;
+}
 }
